# rust_web_server_from_yang

./: .gitignore  LICENSE  README.md
stage_1/: Cargo.toml  readme.md
stage_1/http/src/: httprequest.rs  httpresponse.rs
stage_1/httpserver/: Cargo.toml
stage_1/httpserver/data/: orders.json
stage_1/httpserver/public/: 404.html  health.html  index.html  styles.css
stage_1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
stage_1/tcpclient/: Cargo.toml
stage_1/tcpclient/src/: main.rs
stage_1/tcpserver/: Cargo.toml
stage_1/tcpserver/src/: main.rs
stage_2/: Cargo.toml  readme.md
stage_3/: Cargo.toml  readme.md
stage_3/src/: handlers.rs  lib.rs  models.rs  state.rs
stage_4/: Cargo.toml  db.sql  readme.md  rustfmt.toml
stage_5/: .gitignore  Cargo.toml  readme.md
stage_5/src/: db_access.rs  handlers.rs  lib.rs  main.rs  state.rs
stage_6/: .env  Cargo.toml  readme.md
stage_6/src/: db_access.rs  error.rs  handlers.rs  main.rs
stage_7/: Cargo.toml  db_new.sql  readme.md
stage_7/src/: error.rs  lib.rs  models.rs  routers.rs
stage_7/src/db_access/: course.rs
stage_7/src/handlers/: course.rs
stage_7/src/models/: course.rs
